--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,10 @@
-
+{{!-- 
+  File: login.hbs
+  Purpose: template for the login page
+ --}}
 <div class="container mt-4">
   <div class="card" style="width: 18rem;">
-    <div class="card-header">Login Form</div>
+    <div class="card-header">Login</div>
     <div class="card-body">
       <form action="/auth/login" method="POST">
         <div class="mb-3">
