--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,2 +1,5 @@
-<h4>&copy; 2022  L.D.Nel</h4>
+{{!-- Footer for the application --}}
+<h4>&copy; 2024  Andrew Wallace</h4>
+<p>COMP 2406 - Final Project</p>
 <p><kbd>ctrl + c</kbd> to quit server</p>
+
