--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,10 @@
+{{!-- 
+  File: register.hbs
+  Purpose: template for the register page
+ --}}
 <div class="container mt-4">
   <div class="card" style="width: 18rem;">
-    <div class="card-header">Register Form</div>
+    <div class="card-header">Register</div>
     <div class="card-body">
       <form action="/auth/register" method="POST">
         <div class="mb-3">
