--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,3 +1,7 @@
+{{!-- 
+  File: users.hbs
+  Purpose: template for the users page
+ --}}
 <!DOCTYPE html>
 <html>
 <head> 
@@ -45,7 +49,6 @@
                <td>{{this.email}}</td>
                <td>{{this.password}}</td>
             </tr>
-            {{!-- <p>UserID: {{this.userid}} |  Name: {{this.name}}  |  Email: {{this.email}}  |  Password: {{this.password}}</a></p>  --}}
          {{/each}} 
    </table>
 </div>
