--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,50 +1,56 @@
+{{!-- 
+	File: layout.hbs
+	Purpose: the main template for the application
+ --}}
+
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title> {{title}} </title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title> Exercise Tracker </title>
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	{{!-- Bootstrap --}}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+	{{!-- Shoelace --}}
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css" />
+	<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/shoelace-autoloader.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">COMP 2406 Final Project</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-				</li>
-				{{#if isLoggedIn}}
-				<li class="nav-itme">
-					<a class="nav-link" id="logout-btn" href="/logout">Logout</a>
-				</li>
-				{{else}}
-					<li class="nav-item">
-						<a class="nav-link" id="login" href="/login">Login</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" id="sign-up" href="/register">Register</a>
-					</li>
-				{{/if}}
 
-				{{#if isAdmin}}
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Exercise Tracker</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" id="users" href="/users">Users</a>
+						<a class="nav-link active" aria-current="page" href="/home">Home</a>
 					</li>
-				{{/if}}
-			</ul>
+					{{#if isLoggedIn}}
+					<li class="nav-item">
+						<a class="nav-link" id="logout-btn" href="/logout">Logout</a>
+					</li>
+					{{else}}
+						<li class="nav-item">
+							<a class="nav-link" id="login" href="/login">Login</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" id="sign-up" href="/register">Register</a>
+						</li>
+					{{/if}}
+
+					{{#if isAdmin}}
+						<li class="nav-item">
+							<a class="nav-link" id="users" href="/users">Users</a>
+						</li>
+					{{/if}}
+				</ul>
+			</div>
 		</div>
 	</nav>
 	<main>
